--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
     "url": "git+https://github.com/MuYunyun/blog.git"
   },
   "keywords": [
-    "blog"
+    "Blog",
+    "FE",
+    "React"
   ],
   "author": "muyunyun",
   "homepage": "https://github.com/MuYunyun/blog#readme",
-  "dependencies": {
-    "husky": "^1.3.1",
-    "lint-md": "^0.1.0",
-    "lint-staged": "^8.1.0"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "**/*.md": ["lint-md"],
-    "**/**/*.md": ["lint-md"]
+    "**/*.md": [
+      "lint-md"
+    ],
+    "**/**/*.md": [
+      "lint-md"
+    ]
+  },
+  "devDependencies": {
+    "husky": "^3.0.3",
+    "lint-md": "^0.2.0",
+    "lint-staged": "^9.2.1"
   }
 }
