--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "keywords": [
     "Blog",
-    "FE",
-    "React"
+    "React",
+    "JavaScript",
+    "Data_Structure",
+    "Design_Pattern"
   ],
   "author": "muyunyun",
   "homepage": "https://github.com/MuYunyun/blog#readme",
