docs: update document

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
-BasicSkill/基础篇/askself/hr.md
+BasicSkill/basis/askself/hr.md
 pinduoduo
-React/React源码深度解析.md
+React/React_Source.md
+life/rabbit.md
 backup
 yarn.lock
