docs: adjust dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 BasicSkill/basis/askself/hr.md
+BasicSkill/life/rabbit.md
 pinduoduo
 React/React_Source.md
-life/rabbit.md
 backup
 yarn.lock
