--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "blog",
   "description": "life is a moment",
   "scripts": {
-    "start": "create-react-doc -d React,BasicSkill,Algorithm,LeetCode --clean",
-    "build": "create-react-doc -d React,BasicSkill,Algorithm,LeetCode --clean --build"
+    "start": "create-react-doc -d React,BasicSkill,Algorithm,LeetCode",
+    "build": "create-react-doc -d React,BasicSkill,Algorithm,LeetCode --build"
   },
   "repository": {
     "type": "git",
