fix: document-title

--- a/config.yml
+++ b/config.yml
@@ -3,11 +3,19 @@
 # Site
 title: Time Flying
 
+# Menu dir
+## you can also set detailed dir, such as BasicSkill/css
+menu: React,BasicSkill,Algorithm,LeetCode
+## set init open menu keys
+menuOpenKeys: /BasicSkill
+
 # Github
 ## if you want to editing pages on github, you should config these arguments.
 user: MuYunyun
 repo: blog
-branch: master # the default value of branch is master
+branch: master            # the default value of branch is master
+deploy_branch: gh-pages   # which branch to deploy.(default: gh-pages)
+# publish:                # if you want upload to gitlab or other git platform, you can set full git url in it
 
 # Available values: en| zh-cn
 language: en
