--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "react-doc start",
     "build": "react-doc build",
-    "deploy": "react-doc deploy"
+    "deploy": "react-doc deploy",
+    "download": "leetcode download",
+    "download-all": "leetcode download -a"
   },
   "repository": {
     "type": "git",
