docs: component_design

--- a/config.yml
+++ b/config.yml
@@ -19,7 +19,7 @@ deploy_branch: gh-pages   # which branch to deploy.(default: gh-pages)
 
 # use search plugin: provide ability for searching site globally in the site.
 # default value: true
-search: true
+search: false
 host: 'muyunyun.cn'            # the url host to search
 search_map: {                  # search_map is connected to menu props
   '/Algorithm': 'Algorithm',
