--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start": "react-doc start",
     "build": "react-doc build",
     "deploy": "react-doc deploy",
-    "download": "crd-leetcode download",
-    "download-all": "crd-leetcode download -a"
+    "download": "leetcode download",
+    "download:all": "leetcode download -a"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "commitlint": "^8.3.5",
-    "create-react-doc": "^0.2.0",
+    "create-react-doc": "^0.2.12",
     "husky": "^3.0.3",
     "lint-md": "^0.2.0",
     "lint-md-cli": "^0.1.1",
