chore: update cli

--- a/.github/workflows/traffic2badge.yml
+++ b/.github/workflows/traffic2badge.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Set Traffic
         id: traffic
-        uses: yi-Xu-0100/traffic-to-badge@v1.1.5
+        uses: yi-Xu-0100/traffic-to-badge@v1.1.6
         with:
           my_token: ${{ secrets.TRAFFIC_TOKEN }}
           #(default) static_list: ${{ github.repository }}
@@ -39,6 +39,7 @@ jobs:
           #(default) views_color: brightgreen
           #(default) clones_color: brightgreen
           #(default) logo: github
+          #(default) year:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.7.3
