--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "devDependencies": {
     "commitlint": "^11.0.0",
-    "create-react-doc": "^0.2.21",
+    "crd-seed": "^0.2.25",
+    "create-react-doc": "^0.2.27",
     "husky": "^4.3.8",
     "lint-md": "^0.2.0",
     "lint-md-cli": "^0.1.1",
