--- a/.lintmdrc
+++ b/.lintmdrc
@@ -2,6 +2,7 @@
   "excludeFiles": [],
   "rules": {
     "no-empty-code-lang": 0,
-    "no-trailing-punctuation": 0
+    "no-trailing-punctuation": 0,
+    no-long-code": 0
   }
 }
