--- a/package.json
+++ b/package.json
@@ -22,24 +22,9 @@
   "author": "muyunyun",
   "homepage": "https://github.com/MuYunyun/blog#readme",
   "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "**/*.md": [
-      "lint-md --fix"
-    ]
-  },
   "devDependencies": {
     "commitlint": "^11.0.0",
     "crd-seed": "^1.1.3",
-    "create-react-doc": "^1.1.3",
-    "husky": "^4.3.8",
-    "lint-md": "^0.2.0",
-    "lint-md-cli": "^0.1.1",
-    "lint-staged": "^10.4.2"
+    "create-react-doc": "^1.1.3"
   }
 }
