docs: update typescript document

--- a/config.yml
+++ b/config.yml
@@ -8,8 +8,9 @@ title: Time Flying
 menu: [
   'React',
   'BasicSkill',
-  'Algorithm',
   'FeCloud',
+  'TypeScript',
+  'Algorithm',
   'LeetCode',
   'Product'
 ]
