--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "commitlint": "^11.0.0",
-    "crd-seed": "^1.6.0",
-    "create-react-doc": "^1.6.0"
+    "crd-seed": "^1.6.1-alpha.0",
+    "create-react-doc": "^1.6.1-alpha.0"
   }
 }
