docs: add comment section

--- a/config.yml
+++ b/config.yml
@@ -55,3 +55,9 @@ abbrlink: true
 
 # show Tags in head
 tags: true
+
+# Config comment section
+comment:
+  # Giscus Config, The config parameter that's supported can be seen in [giscus-component](https://github.com/giscus/giscus-component#documentation).
+  GiscusConfig:
+    repoId: MDEwOlJlcG9zaXRvcnkxMTA3MDk1NjI=
